test/mutation_analysis/s0942_di_string_match/hafis/ablation_o3_r50/mutants/53/result.txt
./test/mutation_analysis/s0942_di_string_match/hafis/ablation_o3_r50/mutants/53/Solution.java:30: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
